# tap-hibob

./: MANIFEST.in  README.md  meltano.yml  pyproject.toml  setup.py  tap-hibob.sh  tox.ini
tap_hibob/: streams.py  tap.py
